@@ -3,13 +3,13 @@
 
     <javascript
         id="++theme++graphite.theme/js/graphite.theme.main.js"
-        expression="python:request.cookies.get('bika.graphite.disabled', '0')=='0' and request['HTTP_X_THEME_ENABLED']"
+        expression="python:request.cookies.get('bika.graphite.disabled', '0')=='0' and request.form.get('bika.graphite.disabled', '0')=='0' and request['HTTP_X_THEME_ENABLED']"
         enabled="True" />
 
     <!-- Javascript to control Theme's ON/OFF behavior -->
     <javascript
         id="++theme++graphite.theme/js/graphite.theme.inactive.js"
-        expression="python:request.cookies.get('bika.graphite.disabled', '0')=='1' and request['HTTP_X_THEME_ENABLED']"
+        expression="python:(request.cookies.get('bika.graphite.disabled', '0')=='1' or request.form.get('bika.graphite.disabled', '0')=='1') and request['HTTP_X_THEME_ENABLED']"
         enabled="True" />
 
     <!-- Disable old js -->
